--- a/src/global.css
+++ b/src/global.css
@@ -100,7 +100,7 @@ nav {
   margin-top: 30px;
   font-family: VCR;
   align-items: flex-start;
-  justify-content: end;
+  justify-content: flex-end;
   background: transparent;
   position: absolute;
   z-index: 2;
@@ -121,7 +121,7 @@ nav {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
-  font-family: VCR;
+  font-family: Inter;
   color: #BDBDBD;
   text-transform: uppercase;
   list-style-type: none;
@@ -982,7 +982,7 @@ h1 {
   border-bottom: none;
   /*background-color: var(--control-grey);*/
   background-color: var(--splash-color);
-  margin-top: -5px;
+  margin-top: 0px;
   border-radius: 0;
 }
 .musicControlsSliderWhite::-webkit-slider-thumb {
@@ -1009,6 +1009,12 @@ h1 {
   border-top: none;
   border-bottom: none;
   background-color: white;
+}
+input[type="range"] {
+  -webkit-appearance: none;
+  appearance: none;
+  cursor: pointer;
+  width: 15rem;
 }
 
 .loadingLabel {
@@ -1497,11 +1503,11 @@ h1 {
 
   padding: var(--spacing-3);
   display: grid;
-  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-columns: 1fr 1fr auto;
   grid-auto-flow: column;
   grid-template-areas: 
-  'picture right'
-  'audio buttons';
+  'picture right close'
+  'audio buttons close';
 }
 #troacoModalPicture {
   grid-area: picture;
@@ -1521,10 +1527,21 @@ h1 {
   backdrop-filter: blur(10px);
   border-radius: 10px;
   padding-left: var(--spacing-1);
-  padding-right: var(--spacing-1);
 
   display: flex;
   flex-direction: column;
+}
+#troacoModalClose {
+  grid-area: close;
+  width: 32px;
+  height: 32px;
+  border: none;
+  background: transparent;
+}
+.troacoModalGuestbookRightSide {
+  background: transparent !important;
+  backdrop-filter: none !important;
+  height: 100% !important;
 }
 .troacoModalRightSideContent {
   font-family: Inter;
@@ -1554,6 +1571,19 @@ h1 {
   color: #FFFFFF;
   margin-top: 16px;
   margin-bottom: 16px;
+}
+#troacoModalGuestbookCurrentAccount {
+  background: rgba(217, 217, 217, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  padding: 16px;
+  font-family: VCR;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 #troacoModalAudio {
   grid-area: audio;
@@ -1955,28 +1985,101 @@ h1 {
 
 
 #guestbookMessages {
-  border: solid 1px var(--control-grey);
-  padding: 20px;
+  background: rgba(217, 217, 217, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  padding: 16px;
   height: 400px;
   overflow-x: hidden;
   overflow-y: scroll;
+  height: 92%;
 }
+#guestbookInput {
+  background: rgba(217, 217, 217, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: none;
+  padding: 16px;
+  margin-top: 20px;
+  height: 100%;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;  
+  letter-spacing: 0.01em;
+  color: #F2F2F2;
+}
+/*SCROLLBAR EXPERIMENT*/
+#guestbookMessages::-webkit-scrollbar {              /* scrollbar width */
+  width: 1px;
+  color: #FFFFFF;
+}
+#guestbookMessages::-webkit-scrollbar-track {        /* scrollbar Track */
+  background:  #FFFFFF;                           
+}
+#guestbookMessages::-webkit-scrollbar-thumb {                                   /* scrollbar Handle */
+  background: #FF0000;  /* fallback for old browsers */
+  border-radius: 10px;
+  border-radius: 10px;
+    --webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+#guestbookMessages::-webkit-scrollbar-thumb:hover {  /* scrollbar Handle on hover */
+  background: purple;
+}
+/*END of EXPERIMENT*/
 .guestbookMessage {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: var(--spacing-3);
 }
 .guestbookMessageSender {
-  font-weight: bold;
+  font-family: VCR;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: uppercase;
+  color: #FFFFFF;
   flex-grow: 1;
   margin: 0;
 }
 .guestbookMessageTime {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 20px;
+  letter-spacing: 0.01em;
+  color: #BDBDBD;
   margin: 0;
 }
 .guestbookMessageMessage {
-  margin-top: 20px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.01em;
+  color: #E0E0E0;
+  margin-top: 8px;
   width: 100%;
+}
+#guestbookSendButton {
+  background: url('./assets/send.svg') no-repeat;
+  width: 130px;
+  height: 37px;
+  border: none;
+  color: white;
+  background-color: none;
+  border-radius: 2px;
+}
+#guestbookSendButton:hover {
+  background: url('./assets/sendHover.svg') no-repeat;
+  cursor: pointer;
+}
+#guestbookSendButton:disabled {
+  background: url('./assets/sendDisabled.svg') no-repeat;
+  cursor: pointer;
 }
 
 /** Soundsplash */
